# oraika-orbsight

./: .env  Makefile  README.md  docker-compose.yml
backend/processing/analyzer-worker/: Dockerfile  Dockerrun.aws.template.json  Makefile  options.json  pyproject.toml  rbi_keywords.tsv  readme.md  requirements.in  requirements.txt  setup.py
backend/processing/analyzer-worker/analyser_tests/: check_reviews_analysis.py  extract_json_test.py  test_text_analysis.py
backend/processing/analyzer-worker/analyzer/api/: api.py
backend/processing/analyzer-worker/analyzer/data/: common_data.py  playarena_data.py  playjuniors_data.py
backend/processing/analyzer-worker/analyzer/model/: api_request_response.py  data_store_request.py  entity_data.py  structure_data_request.py  taxonomy_data.py
backend/processing/analyzer-worker/analyzer/persistence/: base_entity_manager.py  db_entity_manager.py  sqs_consumer.py
backend/processing/analyzer-worker/analyzer/service/: analyzer_settings.py  entity_extractor.py  gpt_client.py  gpt_utils.py  processed_data_entity_manager.py  structure_data_extractor.py  taxonomy_extractor.py  text_analysis.py  tiyaro_api.py  utils.py
backend/processing/analyzer-worker/analyzer/worker/: signal_handler.py  tiyaro_exception.py  worker.py
backend/processing/analyzer-worker/api_call/event_ingestion/: android_event.json  ios_event.json  ios_events.json  twitter_event.json
backend/processing/observer-worker/: Dockerfile  Makefile  options.json  pyproject.toml  readme.md  requirements.in  requirements.txt  setup.py
backend/processing/observer-worker/api_call/job_ingestion/: android_job.json  curl_call.sh  ios_job.json  twitter_job.json
backend/processing/observer-worker/observer/domain/: observer_job_handler.py  raw_data.py
backend/processing/observer-worker/observer/integration/: executor.py  obsei_client.py  source_response.json
backend/processing/observer-worker/observer/integration/payload_mock/: android_payload.py  ios_payload.py
backend/processing/observer-worker/observer/persistence/postgresql/: base_entity_manager.py  raw_data_entity_manager.py
backend/processing/observer-worker/observer/persistence/sqs/: sqs_consumer.py  sqs_publisher.py
backend/processing/observer-worker/observer/presentation/: observer_job_controller.py
backend/processing/observer-worker/observer/presentation/model/: observer_job_event.py
backend/processing/observer-worker/observer/utils/: dateutils.py  signal_handler.py
backend/processing/observer-worker/test/: conftest.py  test_observer.py
backend/processing/service-api/: Dockerfile  Dockerrun.aws.template.json  Makefile  docker-compose.yml  options.json  pyproject.toml  readme.md  requirements.in  requirements.txt  setup.py
backend/processing/service-api/service/: __init__.py  main.py
backend/processing/service-api/service/auth/: __init__.py
backend/processing/service-api/service/auth/domain/: auth_handler.py  base.py  session_handler.py
backend/processing/service-api/service/auth/domain/model/: cache_models.py  domain_models.py
backend/processing/service-api/service/auth/persistence/: db_manager.py  nile_client.py  redis_manager.py
backend/processing/service-api/service/auth/presentation/: auth_routes.py
backend/processing/service-api/service/auth/presentation/model/: request.py
backend/processing/service-api/service/business/: __init__.py
backend/processing/service-api/service/business/domain/: base.py  dashboard_service.py  domain_handler.py
backend/processing/service-api/service/business/domain/model/: entity.py  observer.py  stats.py  taxonomy.py
backend/processing/service-api/service/business/persistence/: db_manager.py
backend/processing/service-api/service/business/presentation/: category_routes.py  dashboard_routes.py  entity_routes.py  observer_routes.py  taxonomy_routes.py
backend/processing/service-api/service/common/: base_entity_manager.py  deps.py  http_utils.py  settings.py  utils.py
backend/processing/service-api/service/common/db/: cache_settings.py  node_meta_entity_manager.py  processed_data_entity_manager.py  raw_data_entity_manager.py  taxonomy_entity_manager.py  tenant_entity_manager.py
backend/processing/service-api/service/common/model/: user.py
backend/processing/service-api/service/data/: __init__.py
backend/processing/service-api/service/data/domain/: base.py  dashboard_service.py  domain_handler.py  grafana_service.py  key_phrases_handler.py  text_processor.py  word_freq_handler.py
backend/processing/service-api/service/data/domain/asset/: hinglish_stopwords
backend/processing/service-api/service/data/domain/model/: dashboard_data.py  filter_query_params.py  processed_data.py  raw_data.py  text_analysis_data.py  word_freq.py
backend/processing/service-api/service/data/integration/: grafana_client.py
backend/processing/service-api/service/data/persistence/: db_manager.py
backend/processing/service-api/service/data/presentation/: data_api_routes.py  grafana_api_routes.py  response.py
backend/processing/service-api/service/visualization/: __init__.py
backend/processing/service-api/service/visualization/domain/: base.py  data_view_manager.py  domain_handler.py  dynamic_dashboard_manager.py  echarts_util.py
backend/processing/service-api/service/visualization/domain/dynamic_dashboard/: data_view_manager.py  dynamic_dashboard_manager.py
backend/processing/service-api/service/visualization/domain/model/: chart_models.py  (+2 more)
backend/processing/service-api/service/visualization/persistence/: cubejs_client.py  db_manager.py
backend/processing/service-api/service/visualization/presentation/: dashboard_api_routes.py
backend/processing/service-api/service/workflow/: workflow.py
backend/processing/service-api/tests/: test_redis_manager.py  test_util.py
backend/processing/service-api/tests/analyser/: check_reviews_analysis.py  extract_json_test.py  test_text_analysis.py
backend/processing/service-api/tests/observer/: conftest.py
backend/processing/service-api/tests/observer/job_ingestion/: ios_job.json  twitter_job.json
(+435 files in other folders)
