[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.9"
name = "analyzer"
version = "0.0.1"
description = "Analyzer worker to process raw data"

dependencies = [
    "boto3",
    "cachetools",
    "langdetect",
    "nltk",
    "openai",
    "pandas",
    "psycopg2-binary",
    "requests",
    "sqlmodel",
    "tiktoken",
]

[project.optional-dependencies]

dev = [
    "black",
    "moto",
    "mypy",
    "pgmock",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "pytest-pgsql",
    "types-PyYAML",
    "types-cachetools",
    "types-dateparser",
    "types-protobuf",
    "types-python-dateutil",
    "types-pytz",
    "types-requests",
]

[project.urls]
repository = "https://github.com/oraika-tech/obsights"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["/analyzer"]

[tool.hatch.build.targets.wheel]
packages = ["analyzer"]
