[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.9"
name = "observer"
version = "0.0.1"
description = "Observer tool for fetch text from various sources"

dependencies = [
    "obsei @ git+https://github.com/obsei/obsei#egg=obsei[source]",
    "sqlmodel",
    "fastapi",
    "uvicorn[standard]",
    "uvloop ; sys_platform != 'win32' and sys_platform != 'cygwin'",
    "psycopg2-binary",
    "boto3",
]

[project.optional-dependencies]

dev = [
    "pre-commit",
    "black",
    "mypy",
    "types-requests",
    "types-python-dateutil",
    "types-PyYAML",
    "types-dateparser",
    "types-protobuf",
    "types-pytz",
    "pytest",
    "pip-tools",
]

[project.urls]
repository = "https://github.com/oraika-tech/obsights"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["/observer"]

[tool.hatch.build.targets.wheel]
packages = ["observer"]
