[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.9"
name = "observer"
version = "0.0.1"
description = "Observer tool for fetch text from various sources"

dependencies = [
    "boto3",
    "obsei @ git+https://github.com/obsei/obsei#egg=obsei[source]",
    "psycopg2-binary",
    "sqlmodel",
]

[project.optional-dependencies]

dev = [
    "black",
    "moto",
    "mypy",
    "pgmock",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "pytest-pgsql",
    "types-PyYAML",
    "types-Pygments",
    "types-colorama",
    "types-dateparser",
    "types-protobuf",
    "types-python-dateutil",
    "types-pytz",
    "types-requests",
    "types-setuptools",
]

[project.urls]
repository = "https://github.com/oraika-tech/obsights"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["/observer"]

[tool.hatch.build.targets.wheel]
packages = ["observer"]
