[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.9"
name = "service"
version = "0.0.1"
description = "Service API interface"

dependencies = [
    "sqlmodel",
    "fastapi",
    "uvicorn[standard]",
    'uvloop ; sys_platform != "win32" and sys_platform != "cygwin"',
    "psycopg2-binary",
    "cachetools",
    "bcrypt",
    "python-jose[cryptography]",
    "python-multipart",
    "pandas",
    "nltk",
    "stopwordsiso",
    "rakun2",
    "cachetools",
    "redis",
    "nile_api",
    "requests"
]

[project.optional-dependencies]

dev = [
    "pre-commit",
    "black",
    "mypy",
    "types-requests",
    "types-python-dateutil",
    "types-PyYAML",
    "types-dateparser",
    "types-protobuf",
    "types-pytz",
    "pytest",
    "pip-tools",
    "moto",
    "pytest-mock",
    "pytest-pgsql",
    "pgmock",
]

[project.urls]
repository = "https://github.com/oraika-tech/obsights"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["/service"]

[tool.hatch.build.targets.wheel]
packages = ["service"]
