[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.9"
name = "service"
version = "0.0.1"
description = "Service API interface"


dependencies = [
    "bcrypt",
    "boto3",
    "cachetools",
    "fastapi",
    "langdetect",
    "nltk",
    "obsei[source]",
    "openai",
    "pandas",
    "prefect",
    "psycopg2-binary",
    "pydantic[email]",
    "python-jose[cryptography]",
    "python-multipart",
    "rakun2",
    "redis",
    "requests",
    "sqlmodel",
    "stopwordsiso",
    "tiktoken",
    "uvicorn[standard]",
    'uvloop ; sys_platform != "win32" and sys_platform != "cygwin"',
]

[project.optional-dependencies]

dev = [
    "black",
    "moto",
    "mypy",
    "pgmock",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "pytest-pgsql",
    "types-PyYAML",
    "types-Pygments",
    "types-cachetools",
    "types-colorama",
    "types-dateparser",
    "types-protobuf",
    "types-python-dateutil",
    "types-python-jose",
    "types-pytz",
    "types-redis",
    "types-requests",
    "types-setuptools",
]

[project.urls]
repository = "https://github.com/oraika-tech/obsights"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["/service"]

[tool.hatch.build.targets.wheel]
packages = ["service"]
